# proofframe

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README-crates.md  README.md  SECURITY.md  codecov.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: benchmarks.yml  ci.yml  publish.yml  wheels.yml
benchmarks/: compare_frameworks.py  profile.py  rule_matrix.py
benchmarks/results/: windows-1m-fast.json  windows-1m.json  windows-7_6m-a4.json  windows-7_6m-baseline.json
docs/: testing.md
examples/: contract.json
python/proofframe/: __init__.py  api.py  cli.py
src/: error.rs  lib.rs  pii.rs  receipt.rs
tests/: test_api.py  test_python_surface.py
