[package]
name = "proofframe"
version = "0.4.0-alpha.1"
edition = "2024"
rust-version = "1.85"
description = "Rust-native data contracts, fingerprints, and row-level diffs for Arrow data"
license = "Apache-2.0"
repository = "https://github.com/emirhuseynrmx/proofframe"
keywords = ["arrow", "data-quality", "dataframe", "parquet", "validation"]
categories = ["data-structures", "development-tools", "science"]
include = [
  "/src/**",
  "/python/**",
  "/Cargo.toml",
  "/Cargo.lock",
  "/pyproject.toml",
  "/README.md",
  "/LICENSE",
  "/SECURITY.md",
]

[lib]
name = "_proofframe"
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash = "0.8.12"
arrow = { version = "59.1.0", features = ["pyarrow"] }
base64 = "0.22.1"
blake3 = "1.8.2"
ed25519-dalek = "3.0.0"
getrandom = "0.4.3"
pyo3 = { version = "0.29.0", features = ["abi3-py310", "extension-module"] }
regex = "1.12.2"
roaring = "=0.11.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_json_canonicalizer = "0.3.2"

[dev-dependencies]
proptest = "1.9.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
