[package]
name = "proofframe"
version = "0.4.0-alpha.5"
edition = "2024"
rust-version = "1.85"
description = "Rust-native Arrow data contracts, canonical fingerprints, and proof receipts"
license = "Apache-2.0"
repository = "https://github.com/emirhuseynrmx/proofframe"
homepage = "https://github.com/emirhuseynrmx/proofframe"
documentation = "https://docs.rs/proofframe"
readme = "README-crates.md"
keywords = ["arrow", "data-quality", "dataframe", "validation", "fingerprint"]
categories = ["data-structures", "development-tools", "science"]
include = [
  "/src/**",
  "/docs/**",
  "/examples/**",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/README-crates.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/SECURITY.md",
]

[lib]
name = "proofframe"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3", "arrow/pyarrow"]

[dependencies]
ahash = "0.8.12"
arrow = { version = "59.1.0", default-features = false }
base64 = "0.22.1"
blake3 = "1.8.2"
ed25519-dalek = "3.0.0"
getrandom = "0.4.3"
pyo3 = { version = "0.29.0", optional = true, features = ["abi3-py310"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_json_canonicalizer = "0.3.2"
tempfile = "3.27.0"
thiserror = "2.0.17"

[dev-dependencies]
proptest = "1.9.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
